# AgenticChaosMonkey

./: .buildinfo  .codecov.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION_REFERENCE.html  KUBERNETES.html  OBSERVABILITY.html  RAG_POISONING.html  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  SWARM_DISRUPTION.html  TAPE_REPLAY.html  VERSIONING.md  changelog.html  contributing.html  docker-compose.yaml  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  requirements-lock.txt  requirements.txt  search.html  setup.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
_modules/: index.html
_modules/agent_chaos_sdk/: config_loader.html  decorators.html  swarm_runner.html
_modules/agent_chaos_sdk/proxy/: addon.html
_modules/agent_chaos_sdk/proxy/strategies/: base.html  mcp.html  network.html
_modules/agent_chaos_sdk/storage/: tape.html
_sources/: KUBERNETES.md.txt  RAG_POISONING.md.txt  SWARM_DISRUPTION.md.txt  index.rst.txt  quickstart.rst.txt
_sources/api/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/markdown/: COMPREHENSIVE_TESTING_GUIDE.md.txt  CONTRIBUTING.md.txt  README.md.txt  SUPPORT.md.txt  index.rst.txt
_sources/troubleshooting/: DASHBOARD_TROUBLESHOOTING.md.txt
agent_chaos/: __init__.py
agent_chaos_sdk/: __init__.py  cli.py  config_loader.py  decorators.py  middleware.py  sdk.py  swarm_runner.py
agent_chaos_sdk/common/: __init__.py  async_utils.py  audit.py  config.py  errors.py  file_logger.py  logger.py  resilience.py  security.py  telemetry.py  utils.py
agent_chaos_sdk/dashboard/: __init__.py  events.py  index.html  server.py
agent_chaos_sdk/proxy/: __init__.py  addon.py  classifier.py  context.py  factory.py
agent_chaos_sdk/proxy/strategies/: __init__.py  base.py  cognitive.py  data.py  group.py  mcp.py  network.py  rag.py  semantic.py  simple_log.py  swarm.py
agent_chaos_sdk/reporter/: __init__.py  generate.py  scorecard.py
agent_chaos_sdk/reporter/templates/: compliance_audit_report.md
agent_chaos_sdk/storage/: __init__.py  tape.py
agent_chaos_sdk/tools/: __init__.py  mock_server.py
config/: chaos_config.yaml  otel-collector-config.yaml
docs/: CONFIGURATION_REFERENCE.md  Makefile  OBSERVABILITY.md  RAG_POISONING.md  SWARM_DISRUPTION.md  TAPE_REPLAY.md  changelog.rst  conf.py  contributing.rst  index.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: CONFIGURATION_REFERENCE.doctree  KUBERNETES.doctree  OBSERVABILITY.doctree  RAG_POISONING.doctree  SWARM_DISRUPTION.doctree  TAPE_REPLAY.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/_build/doctrees/examples/: index.doctree
docs/_build/doctrees/markdown/: CHANGELOG.doctree  CODE_OF_CONDUCT.doctree  COMPREHENSIVE_TESTING_GUIDE.doctree  CONTRIBUTING.doctree  EXAMPLES_PLANS.doctree  PRODUCTION_VALIDATION.doctree  QUICK_START.doctree  README.doctree  SECURITY.doctree  SUPPORT.doctree  VERSIONING.doctree  index.doctree
docs/_build/doctrees/troubleshooting/: DASHBOARD_TROUBLESHOOTING.doctree
docs/_build/html/: .buildinfo  RAG_POISONING.html  TAPE_REPLAY.html  contributing.html  genindex.html  index.html  objects.inv
docs/_build/html/_modules/agent_chaos_sdk/: decorators.html
docs/_build/html/_modules/agent_chaos_sdk/proxy/strategies/: base.html  network.html
docs/_build/html/_modules/agent_chaos_sdk/storage/: tape.html
docs/_build/html/_sources/: CONFIGURATION_REFERENCE.md.txt  OBSERVABILITY.md.txt  index.rst.txt  quickstart.rst.txt
docs/_build/html/_sources/markdown/: EXAMPLES_PLANS.md.txt  index.rst.txt
docs/_build/html/examples/: index.html
docs/_build/html/markdown/: CODE_OF_CONDUCT.html  COMPREHENSIVE_TESTING_GUIDE.html  QUICK_START.html  README.html  SECURITY.html  SUPPORT.html  index.html
docs/api/: index.rst
docs/examples/: index.rst
docs/markdown/: PRODUCTION_VALIDATION.md  QUICK_START.md  README.md  VERSIONING.md
examples/: index.html  misinformation.json
examples/plans/: COGNITIVE_ATTACKS.md  README.md  advanced_chaos_testing.yaml  cognitive_attacks.yaml  multi_agent_chaos.yaml  payment_failure.yaml  rag_poisoning.yaml  stress_test_chaos.yaml  swarm_disruption.yaml  travel_agent_chaos.yaml  travel_agent_chaos_prod.yaml  travel_agent_chaos_validate.yaml
examples/production_simulation/: multi_agent_demo.py  travel_agent.py  validation_rules.yaml
examples/production_simulation/multi_agent/: __init__.py  communication.py  communication_server.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
markdown/: CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  EXAMPLES_PLANS.html  PRODUCTION_VALIDATION.html  QUICK_START.html  README.html  SECURITY.html  SUPPORT.html  VERSIONING.html  index.html
scripts/: benchmark.sh  check_prerequisites.sh  release.sh  run_chaos_test.sh  tape_viewer.py
src/common/: file_logger.py
src/dashboard/: index.html
src/reporter/: __init__.py  generate.py  scorecard.py
src/tools/: __init__.py  mock_server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end_replay_dashboard.py  test_proxy_addon.py  test_sdk_middleware_langchain.py  test_sdk_middleware_openai_responses.py
tests/performance/: locustfile.py
tests/unit/: test_audit_logging.py  test_base_strategy.py  test_classifier.py  test_classifier_override.py  test_classifier_rules.py  test_cognitive_strategies.py  test_config_loader.py  test_config_reload_concurrency.py  test_dashboard_server.py  test_data_corruption.py  test_decorators.py  test_error_strategy.py  test_group_strategy.py  test_latency_strategy.py  test_mcp_fuzzing.py  test_rag_strategy.py  test_replay_defaults.py  test_sdk_middleware.py  test_security.py  test_swarm_runner.py  test_tape.py  test_tape_encryption.py  test_tape_mismatch_logging.py  test_telemetry_setup.py
troubleshooting/: DASHBOARD_TROUBLESHOOTING.html
