[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-chaos-monkey"
version = "0.1.0"
description = "Universal Chaos Engineering SDK for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent Chaos Platform Team", email = "support@agent-chaos-platform.com"}
]
maintainers = [
    {name = "Agent Chaos Platform Team", email = "support@agent-chaos-platform.com"}
]
keywords = ["chaos-engineering", "testing", "ai-agents", "observability", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # Core dependencies
    "mitmproxy>=10.0.0,<11.0.0",
    "tenacity>=8.0.0,<9.0.0",
    # OpenTelemetry for observability
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0.0",
    "opentelemetry-exporter-prometheus>=0.60b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.42b0,<1.0.0",
    "grpcio>=1.50.0,<2.0.0",
    # Configuration and validation
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    # CLI framework
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    # HTTP clients
    "httpx>=0.24.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    # LangChain for agent framework
    "langchain-core>=0.1.0,<0.3.0",
    "langchain-ollama>=0.1.0,<0.3.0",
    # Mock server dependencies
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    # JSONPath for RAG poisoning
    "jsonpath-ng>=1.6.0,<2.0.0",
    # Cache for memory-efficient data structures
    "cachetools>=5.3.0,<6.0.0",
    # Encryption at rest for tapes
    "cryptography>=41.0.0,<44.0.0",
    "pyjwt>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "locust>=2.0.0,<3.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "mypy>=1.7.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "pre-commit>=3.0.0,<4.0.0",
]
kubernetes = [
    "kubernetes>=28.0.0,<29.0.0",
]

[project.urls]
Homepage = "https://github.com/AgenticChaosMonkey/AgenticChaosMonkey"
Documentation = "https://github.com/AgenticChaosMonkey/AgenticChaosMonkey#readme"
Repository = "https://github.com/AgenticChaosMonkey/AgenticChaosMonkey"
"Bug Reports" = "https://github.com/AgenticChaosMonkey/AgenticChaosMonkey/issues"

[project.scripts]
agent-chaos = "agent_chaos_sdk.cli:app"

[project.entry-points."agent_chaos.strategies"]
latency = "agent_chaos_sdk.proxy.strategies.network:LatencyStrategy"
error = "agent_chaos_sdk.proxy.strategies.network:ErrorStrategy"
data_corruption = "agent_chaos_sdk.proxy.strategies.data:JSONCorruptionStrategy"
semantic = "agent_chaos_sdk.proxy.strategies.semantic:SemanticStrategy"
mcp_fuzzing = "agent_chaos_sdk.proxy.strategies.mcp:MCPProtocolFuzzingStrategy"
group_chaos = "agent_chaos_sdk.proxy.strategies.group:GroupChaosStrategy"
group_failure = "agent_chaos_sdk.proxy.strategies.group:GroupFailureStrategy"
simple_log = "agent_chaos_sdk.proxy.strategies.simple_log:SimpleLogStrategy"
hallucination = "agent_chaos_sdk.proxy.strategies.cognitive:HallucinationStrategy"
context_overflow = "agent_chaos_sdk.proxy.strategies.cognitive:ContextOverflowStrategy"
phantom_document = "agent_chaos_sdk.proxy.strategies.rag:PhantomDocumentStrategy"
rag_poisoning = "agent_chaos_sdk.proxy.strategies.rag:PhantomDocumentStrategy"
swarm_disruption = "agent_chaos_sdk.proxy.strategies.swarm:SwarmDisruptionStrategy"

[tool.setuptools]
packages = ["agent_chaos_sdk"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-p", "no:warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Async tests (requires pytest-asyncio)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agent_chaos_sdk"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "mitmproxy.*",
    "opentelemetry.*",
    "langchain.*",
    "httpx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "test_.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

